Corrected breadcrumb layout problem.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -395,11 +395,11 @@ form.well {
 }
 .breadcrumb {
   border:1px solid #dedede;
-  height:2.3em;
+  height:1.8em;
   ul {
     li {
       float:left;
-      line-height:2.3em;
+      line-height:1.8em;
       color:#777;       
       list-style-type:none;
       padding:0 0 0 .73em;
